minor fix, version 1.0.2

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-gatsby-web",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "A CLI to bootstrap Gatsby app",
   "main": "src/index.js",
   "bin": {
@@ -12,6 +12,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "files": [
+    "bin/",
+    "src/",
+    "templates/"
+  ],
   "keywords": [
     "cli",
     "create-gatsby-web"
