--- a/templates/typescript/package.json
+++ b/templates/typescript/package.json
@@ -49,15 +49,17 @@
     "babel-loader": "^8.0.6",
     "babel-preset-react-app": "^9.1.1",
     "core-js": "^3",
-    "cross-env": "^6.0.0",
+    "cross-env": "6.0.0",
     "css-loader": "^3.4.2",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
+    "gatsby-plugin-less": "^3.0.19",
     "husky": "^4.2.3",
     "jest": "^25.1.0",
+    "less": "^3.11.1",
     "lint-staged": "^10.0.7",
     "netlify-cli": "^2.32.0",
     "node-sass": "^4.13.1",
@@ -91,7 +93,6 @@
     "clear-cache": "rm -r .cache",
     "types-check": "tsc --noEmit",
     "format": "prettier \"**/*.+(js|jsx|json|ts|tsx|css|scss|md|mdx|graphql)\" --write",
-    "start": "rm -rf .cache && cross-env NODE_ENV=development yarn run develop",
     "serve": "gatsby serve",
     "test": "cross-env NODE_ENV=test jest",
     "ci-test": "cross-env NODE_ENV=test jest -u -w 2",
@@ -110,12 +111,5 @@
       "yarn format",
       "git add"
     ]
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/tripheo0412/jamstack-typescript-boilerplate"
-  },
-  "bugs": {
-    "url": "https://github.com/tripheo0412/jamstack-typescript-boilerplate/issues/"
   }
 }
