update to version 2.0.0

--- a/templates/javascript/src/.circleci/config.yml
+++ b/templates/javascript/src/.circleci/config.yml
@@ -1,4 +1,6 @@
 version: 2.1
+orbs:
+  jq: circleci/jq@2.0.1
 parameters:
   # This parameter is used to trigger the main workflow
   trigger:
@@ -14,10 +16,30 @@ parameters:
 executors:
   node-executor:
     docker:
-      - image: circleci/node:10.16.0
+      - image: circleci/node:lts-browsers
     working_directory: ~/repo
 
 jobs:
+  checking-performance:
+    executor: node-executor
+    steps:
+      - checkout
+      - jq/install
+      - attach_workspace:
+          at: ~/repo
+      - run:
+          name: Install Moreutils
+          command: sudo apt-get install moreutils
+      - run:
+          name: Detecting all pages
+          command: ./tasks/lighthouse/detect-pages.sh
+      - run:
+          name: Lighthouse Auditing
+          command: yarn lhci:run
+      - run:
+          name: Lighthouse Report To Github
+          command: yarn lhci:upload
+
   install-dependencies-test-lint:
     executor: node-executor
     steps:
@@ -26,7 +48,7 @@ jobs:
           at: ~/repo
       - restore_cache:
           keys:
-            - yarn-cache-{{ checksum "yarn.lock" }}
+            - yarn-cache-11-{{ checksum "yarn.lock" }}
       - run:
           name: Install Dependencies
           command: yarn install && npm rebuild
@@ -37,22 +59,20 @@ jobs:
           name: Testing
           command: yarn ci-test
       - save_cache:
-          key: yarn-cache-{{ checksum "yarn.lock" }}
+          key: yarn-cache-11-{{ checksum "yarn.lock" }}
           paths:
             - ./node_modules
       - persist_to_workspace:
           root: .
           paths:
             - ./node_modules
-  gatsby-storybook-build-preview-deploy:
+  gatsby-build-preview-deploy:
     executor: node-executor
     steps:
       - checkout
+      - jq/install
       - attach_workspace:
           at: ~/repo
-      - run:
-          name: Install JQ
-          command: sudo apt-get install jq
       - run:
           name: Create GitHub Gatsby Deployment
           command: ./tasks/deployment/gatsby-deploy-start.sh > gatsby_deployment
@@ -74,6 +94,17 @@ jobs:
           name: Add GitHub Gatsby Deployment error status
           command: ./tasks/deployment/gatsby-deploy-end.sh error
           when: on_fail
+      - persist_to_workspace:
+          root: .
+          paths:
+            - ./public
+  storybook-build-preview-deploy:
+    executor: node-executor
+    steps:
+      - checkout
+      - jq/install
+      - attach_workspace:
+          at: ~/repo
       - run:
           name: Create GitHub Storybook Deployment
           command: ./tasks/deployment/storybook-deploy-start.sh > storybook_deployment
@@ -101,6 +132,7 @@ jobs:
     executor: node-executor
     steps:
       - checkout
+      - jq/install
       - restore_cache:
           keys:
             - yarn-cache-{{ checksum "yarn.lock" }}
@@ -117,9 +149,6 @@ jobs:
           key: yarn-cache-{{ checksum "yarn.lock" }}
           paths:
             - ./node_modules
-      - run:
-          name: Install JQ
-          command: sudo apt-get install jq
       - run:
           name: Create GitHub Gatsby Deployment
           command: ./tasks/deployment/gatsby-deploy-start.sh > gatsby_deployment
@@ -148,11 +177,9 @@ jobs:
     executor: node-executor
     steps:
       - checkout
+      - jq/install
       - attach_workspace:
           at: ~/repo
-      - run:
-          name: Install JQ
-          command: sudo apt-get install jq
       - run:
           name: Create GitHub Gatsby Deployment
           command: ./tasks/deployment/gatsby-deploy-start.sh > gatsby_deployment
@@ -195,6 +222,7 @@ jobs:
     executor: node-executor
     steps:
       - checkout
+      - jq/install
       - restore_cache:
           keys:
             - yarn-cache-{{ checksum "yarn.lock" }}
@@ -211,9 +239,6 @@ jobs:
           key: yarn-cache-{{ checksum "yarn.lock" }}
           paths:
             - ./node_modules
-      - run:
-          name: Install JQ
-          command: sudo apt-get install jq
       - restore_cache:
           keys:
             - gatsby-public-cache-{{ .Branch }}
@@ -232,11 +257,9 @@ jobs:
     executor: node-executor
     steps:
       - checkout
+      - jq/install
       - attach_workspace:
           at: ~/repo
-      - run:
-          name: Install JQ
-          command: sudo apt-get install jq
       - restore_cache:
           keys:
             - gatsby-public-cache-{{ .Branch }}
@@ -257,7 +280,15 @@ workflows:
     when: << pipeline.parameters.trigger >>
     jobs:
       - install-dependencies-test-lint
-      - gatsby-storybook-build-preview-deploy:
+      - gatsby-build-preview-deploy:
+          requires:
+            - install-dependencies-test-lint
+          filters:
+            branches:
+              ignore:
+                - develop
+                - master
+      - storybook-build-preview-deploy:
           requires:
             - install-dependencies-test-lint
           filters:
@@ -278,6 +309,14 @@ workflows:
           filters:
             branches:
               only:
+                - master
+      - checking-performance:
+          requires:
+            - gatsby-build-preview-deploy
+          filters:
+            branches:
+              ignore:
+                - develop
                 - master
 
   cms-webhook-develop:
