--- a/templates/javascript/src/.lintstagedrc.json
+++ b/templates/javascript/src/.lintstagedrc.json
@@ -1,7 +1,4 @@
 {
   "src/*.{js, jsx}": "yarn lint",
-  "**/*.+(js|jsx|json|ts|tsx|css|scss|md|mdx|graphql)": [
-    "yarn format",
-    "git add"
-  ]
+  "**/*.+(js|jsx|json|ts|tsx|css|scss|md|mdx|graphql)": ["yarn format"]
 }
